co2mpas driver documentation

--- a/ev.ipynb
+++ b/ev.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This is an ipython notebook to present hot to use the co2mpas driver model (i.e., MFC) to simulate the driver behaviour on an electric vehicle.\n"
+    "This is an ipython notebook to present how to use the co2mpas driver model (i.e., MFC) to simulate the driver behaviour on an electric vehicle.\n"
    ]
   },
   {
@@ -67,7 +67,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " * Serving Flask app \"C:\\Users\\makieas\\AppData\\Local\\Temp\\tmp6nkq74ng\" (lazy loading)\n",
+      " * Serving Flask app \"C:\\Users\\makieas\\AppData\\Local\\Temp\\tmpe_shppco\" (lazy loading)\n",
       " * Environment: production\n",
       "   WARNING: Do not use the development server in a production environment.\n",
       "   Use a production WSGI server instead.\n",
@@ -78,18 +78,18 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " * Running on http://localhost:52032/ (Press CTRL+C to quit)\n"
+      " * Running on http://localhost:57558/ (Press CTRL+C to quit)\n"
      ]
     },
     {
      "data": {
       "text/html": [
        "\n",
-       "<iframe width=\"100%\" height=\"500\" id=\"2374537737216\" src=\"http://localhost:52032/\">\n",
+       "<iframe width=\"100%\" height=\"500\" id=\"1611474018824\" src=\"http://localhost:57558/\">\n",
        "</iframe>\n"
       ],
       "text/plain": [
-       "Site(SiteMap([(Dispatcher 2374455825744, SiteMap([(load, SiteMap()), (model, SiteMap()), (plot, SiteMap())]))]), host='localhost', port=0, depth=-1, index=False, root_path=None)"
+       "Site(SiteMap([(Dispatcher 1611392013424, SiteMap([(load, SiteMap()), (model, SiteMap()), (plot, SiteMap())]))]), host='localhost', port=0, depth=-1, index=False, root_path=None)"
       ]
      },
      "execution_count": 2,
@@ -100,7 +100,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "127.0.0.1 - - [05/Sep/2019 09:45:27] \"GET / HTTP/1.1\" 200 -\n"
+      "127.0.0.1 - - [01/Oct/2019 11:58:38] \"GET / HTTP/1.1\" 200 -\n"
      ]
     }
    ],
@@ -117,7 +117,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " * Serving Flask app \"C:\\Users\\makieas\\AppData\\Local\\Temp\\tmpogcpdax1\" (lazy loading)\n",
+      " * Serving Flask app \"C:\\Users\\makieas\\AppData\\Local\\Temp\\tmpx246scjw\" (lazy loading)\n",
       " * Environment: production\n",
       "   WARNING: Do not use the development server in a production environment.\n",
       "   Use a production WSGI server instead.\n",
@@ -128,14 +128,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " * Running on http://localhost:52041/ (Press CTRL+C to quit)\n"
+      " * Running on http://localhost:57570/ (Press CTRL+C to quit)\n"
      ]
     },
     {
      "data": {
       "text/html": [
        "\n",
-       "<iframe width=\"100%\" height=\"500\" id=\"2374543791496\" src=\"http://localhost:52041/\">\n",
+       "<iframe width=\"100%\" height=\"500\" id=\"1611478044456\" src=\"http://localhost:57570/\">\n",
        "</iframe>\n"
       ],
       "text/plain": [
@@ -150,7 +150,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "127.0.0.1 - - [05/Sep/2019 09:45:28] \"GET / HTTP/1.1\" 200 -\n"
+      "127.0.0.1 - - [01/Oct/2019 11:58:41] \"GET / HTTP/1.1\" 200 -\n"
      ]
     }
    ],
@@ -167,7 +167,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " * Serving Flask app \"C:\\Users\\makieas\\AppData\\Local\\Temp\\tmpz18uh81c\" (lazy loading)\n",
+      " * Serving Flask app \"C:\\Users\\makieas\\AppData\\Local\\Temp\\tmp6xtw7ooq\" (lazy loading)\n",
       " * Environment: production\n",
       "   WARNING: Do not use the development server in a production environment.\n",
       "   Use a production WSGI server instead.\n",
@@ -178,18 +178,18 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " * Running on http://localhost:52048/ (Press CTRL+C to quit)\n"
+      " * Running on http://localhost:57577/ (Press CTRL+C to quit)\n"
      ]
     },
     {
      "data": {
       "text/html": [
        "\n",
-       "<iframe width=\"100%\" height=\"500\" id=\"2374575053288\" src=\"http://localhost:52048/\">\n",
+       "<iframe width=\"100%\" height=\"500\" id=\"1611511198384\" src=\"http://localhost:57577/\">\n",
        "</iframe>\n"
       ],
       "text/plain": [
-       "Site(SiteMap([(Dispatcher 2374455825744, SiteMap([(load, SiteMap()), (model, SiteMap()), (plot, SiteMap())]))]), host='localhost', port=0, depth=-1, index=False, root_path=None)"
+       "Site(SiteMap([(Dispatcher 1611392013424, SiteMap([(load, SiteMap()), (model, SiteMap()), (plot, SiteMap())]))]), host='localhost', port=0, depth=-1, index=False, root_path=None)"
       ]
      },
      "execution_count": 4,
@@ -200,7 +200,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "127.0.0.1 - - [05/Sep/2019 09:45:31] \"GET / HTTP/1.1\" 200 -\n"
+      "127.0.0.1 - - [01/Oct/2019 11:58:43] \"GET / HTTP/1.1\" 200 -\n"
      ]
     }
    ],
@@ -240,10 +240,9 @@
        " 'motor_max_torque',\n",
        " 'vehicle_max_speed',\n",
        " 'poly_spline',\n",
-       " 'Start',\n",
-       " 'Stop',\n",
+       " 'start',\n",
+       " 'stop',\n",
        " 'use_cubic',\n",
-       " 'starting_speed',\n",
        " 'sp_bins',\n",
        " 'discrete_poly_spline',\n",
        " 'car_res_curve_force',\n",
@@ -255,7 +254,7 @@
        " 'car_height',\n",
        " 'car_type',\n",
        " 'Alimit',\n",
-       " 'Curves',\n",
+       " 'curves',\n",
        " 'discrete_acceleration_curves',\n",
        " 'gear_shifting_style',\n",
        " 'use_linear_gs',\n",
@@ -263,10 +262,12 @@
        " 'idle_engine_speed_median',\n",
        " 'idle_engine_speed_std',\n",
        " 'Tans',\n",
+       " 'tans',\n",
        " 'duration',\n",
        " 'sim_step',\n",
        " 'times',\n",
        " 'transmission',\n",
+       " 'starting_speed',\n",
        " 'desired_velocity',\n",
        " 'driver_style',\n",
        " 'gears',\n",
