--- a/sample_light_co2mpas.ipynb
+++ b/sample_light_co2mpas.ipynb
@@ -8,6 +8,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This is an ipython notebook to present how to use the co2mpas driver model (i.e., MFC) to calculate CO2 emissions in grams for a series of speed profile."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -34,7 +41,7 @@
       ]
      },
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -60,7 +67,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " * Serving Flask app \"C:\\Users\\makieas\\AppData\\Local\\Temp\\tmplverv272\" (lazy loading)\n",
+      " * Serving Flask app \"C:\\Users\\makieas\\AppData\\Local\\Temp\\tmpu43nhpic\" (lazy loading)\n",
       " * Environment: production\n",
       "   WARNING: Do not use the development server in a production environment.\n",
       "   Use a production WSGI server instead.\n",
@@ -71,18 +78,18 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " * Running on http://localhost:55432/ (Press CTRL+C to quit)\n"
+      " * Running on http://localhost:57847/ (Press CTRL+C to quit)\n"
      ]
     },
     {
      "data": {
       "text/html": [
        "\n",
-       "<iframe width=\"100%\" height=\"500\" id=\"2723201925976\" src=\"http://localhost:55432/\">\n",
+       "<iframe width=\"100%\" height=\"500\" id=\"1678507832040\" src=\"http://localhost:57847/\">\n",
        "</iframe>\n"
       ],
       "text/plain": [
-       "Site(SiteMap([(Dispatcher 2723119871032, SiteMap([(load, SiteMap()), (model, SiteMap()), (plot, SiteMap())]))]), host='localhost', port=0, depth=-1, index=False, root_path=None)"
+       "Site(SiteMap([(Dispatcher 1678425896104, SiteMap([(load, SiteMap()), (model, SiteMap()), (plot, SiteMap())]))]), host='localhost', port=0, depth=-1, index=False, root_path=None)"
       ]
      },
      "execution_count": 2,
@@ -93,7 +100,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "127.0.0.1 - - [05/Sep/2019 15:35:52] \"GET / HTTP/1.1\" 200 -\n"
+      "127.0.0.1 - - [01/Oct/2019 12:02:02] \"GET / HTTP/1.1\" 200 -\n"
      ]
     }
    ],
@@ -110,7 +117,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " * Serving Flask app \"C:\\Users\\makieas\\AppData\\Local\\Temp\\tmpymjz8bd5\" (lazy loading)\n",
+      " * Serving Flask app \"C:\\Users\\makieas\\AppData\\Local\\Temp\\tmpakoc0qe6\" (lazy loading)\n",
       " * Environment: production\n",
       "   WARNING: Do not use the development server in a production environment.\n",
       "   Use a production WSGI server instead.\n",
@@ -121,14 +128,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " * Running on http://localhost:55441/ (Press CTRL+C to quit)\n"
+      " * Running on http://localhost:57868/ (Press CTRL+C to quit)\n"
      ]
     },
     {
      "data": {
       "text/html": [
        "\n",
-       "<iframe width=\"100%\" height=\"500\" id=\"2723207869608\" src=\"http://localhost:55441/\">\n",
+       "<iframe width=\"100%\" height=\"500\" id=\"1678514082424\" src=\"http://localhost:57868/\">\n",
        "</iframe>\n"
       ],
       "text/plain": [
@@ -143,7 +150,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "127.0.0.1 - - [05/Sep/2019 15:35:56] \"GET / HTTP/1.1\" 200 -\n"
+      "127.0.0.1 - - [01/Oct/2019 12:02:06] \"GET / HTTP/1.1\" 200 -\n"
      ]
     }
    ],
