added(test.ipynb): Added test.ipynb on how to use co2mpas_driver.

--- a/examples/sample_simulation.ipynb
+++ b/examples/sample_simulation.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -69,14 +69,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " * Serving Flask app \"C:\\Users\\makieas\\AppData\\Local\\Temp\\tmpzgvc7qu6\" (lazy loading)\n",
+      " * Serving Flask app \"C:\\Users\\makieas\\AppData\\Local\\Temp\\tmp2oki32t4\" (lazy loading)\n",
       " * Environment: production\n",
       "   WARNING: Do not use the development server in a production environment.\n",
       "   Use a production WSGI server instead.\n",
@@ -87,23 +87,30 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " * Running on http://localhost:59331/ (Press CTRL+C to quit)\n"
+      " * Running on http://localhost:59894/ (Press CTRL+C to quit)\n"
      ]
     },
     {
      "data": {
       "text/html": [
        "\n",
-       "<iframe width=\"100%\" height=\"500\" id=\"2778256097968\" src=\"http://localhost:59331/\">\n",
+       "<iframe width=\"100%\" height=\"500\" id=\"2401518456112\" src=\"http://localhost:59894/\">\n",
        "</iframe>\n"
       ],
       "text/plain": [
-       "Site(SiteMap([(Dispatcher 2778110788384, SiteMap([(load, SiteMap()), (model, SiteMap()), (plot, SiteMap())]))]), host='localhost', port=0, depth=-1, index=False, root_path=None)"
+       "Site(SiteMap([(Dispatcher 2401477456056, SiteMap([(load, SiteMap()), (model, SiteMap()), (plot, SiteMap())]))]), host='localhost', port=0, depth=-1, index=False, root_path=None)"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [12/Nov/2019 10:19:32] \"GET / HTTP/1.1\" 200 -\n"
+     ]
     }
    ],
    "source": [
