--- a/examples/ev.ipynb
+++ b/examples/ev.ipynb
@@ -208,7 +208,8 @@
     }
    ],
    "source": [
-    "sol = driver(dict(vehicle_id=39393, db_path='C:/Apps/new_MFC/co2mpas_driver/db/EuroSegmentCar.csv', \n",
+    "# Remember to Insert vehicle data base path (db_path)\n",
+    "sol = driver(dict(vehicle_id=39393, db_path='../co2mpas_driver/db/EuroSegmentCar.csv', \n",
     "                  inputs=dict(inputs={'gear_shifting_style': 0.9, 'desired_velocity': 34.4, 'starting_velocity': 0,\n",
     "                                        'driver_style': 1, 'sim_step': 0.2}))) # Insert vehicle data base path\n",
     "sol.plot(view=False).site(index=False)"
