--- a/examples/sample_simulation.ipynb
+++ b/examples/sample_simulation.ipynb
@@ -216,7 +216,8 @@
     }
    ],
    "source": [
-    "sol = driver(dict(vehicle_id=39393, db_path='C:/Apps/new_MFC/co2mpas_driver/db/EuroSegmentCar.csv', \n",
+    "# Remember to upload vehicle data base (db_path)\n",
+    "sol = driver(dict(vehicle_id=39393, db_path='../co2mpas_driver/db/EuroSegmentCar.csv', \n",
     "                  inputs=dict(inputs={'gear_shifting_style': 0.9, 'desired_velocity': 124/3.6, 'starting_velocity': 0,\n",
     "                                        'driver_style': 0.2, 'sim_start': 10, 'duration': 100, 'sim_step': 0.1}))) # Insert vehicle data base path\n",
     "sol.plot(view=False).site(index=False)"
